Fixed bug with toolbaritems

--- a/PhantasmaMail/PhantasmaMail/Views/InboxView.xaml
+++ b/PhantasmaMail/PhantasmaMail/Views/InboxView.xaml
@@ -13,25 +13,6 @@
     xmlns:behaviors="clr-namespace:PhantasmaMail.Behaviors;assembly=PhantasmaMail"
     Title="{extensions:Translate PageTitle_Inbox}"
     BackgroundColor="{StaticResource WhiteBackground}">
-
-    <ContentPage.ToolbarItems>
-        <ToolbarItem Command="{Binding NewMessageCommand}" IsEnabled="{Binding IsMultipleSelectionActive, Converter={StaticResource InverseBooleanConverter}}" >
-            <ToolbarItem.Icon>
-                <OnPlatform x:TypeArguments="FileImageSource">
-                    <On Platform="Android, iOS" Value="WriteEmail.png" />
-                    <On Platform="UWP" Value="Assets/WriteEmail.png" />
-                </OnPlatform>
-            </ToolbarItem.Icon>
-        </ToolbarItem>
-        <ToolbarItem Command="{Binding DeleteSelectedMessages}" IsEnabled="{Binding IsMultipleSelectionActive}" >
-            <ToolbarItem.Icon>
-                <OnPlatform x:TypeArguments="FileImageSource">
-                    <On Platform="Android, iOS" Value="trash_bar.png" />
-                    <On Platform="UWP" Value="Assets/trash_bar.png" />
-                </OnPlatform>
-            </ToolbarItem.Icon>
-        </ToolbarItem>
-    </ContentPage.ToolbarItems>
     <ContentPage.Content>
         <Grid VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
             <Grid.RowDefinitions>
@@ -71,7 +52,7 @@
                         SelectedItem="{Binding MessageSelected}"
                         SelectionBackgroundColor="{StaticResource GradientEndColor}"
                         SelectionMode="Single" 
-                        HoldCommand="{Binding ActivateMultipleSelectionCommand}"
+                        ItemHolding="InboxListView_OnItemHolding"
                         AllowSwiping="True"
                         VerticalOptions="FillAndExpand">
                         <syncfusion:SfListView.Triggers>
@@ -110,8 +91,8 @@
                                                                           WidthRequest="21">
                                             <ffimageloadingsvg:SvgCachedImage.Source>
                                                 <OnPlatform x:TypeArguments="ImageSource">
-                                                    <On Platform="Android, iOS" Value="settings.svg" />
-                                                    <On Platform="UWP" Value="Assets/settings.svg" />
+                                                    <On Platform="Android, iOS" Value="SelectionCheck.svg" />
+                                                    <On Platform="UWP" Value="Assets/SelectionCheck.svg" />
                                                 </OnPlatform>
                                             </ffimageloadingsvg:SvgCachedImage.Source>
                                         </ffimageloadingsvg:SvgCachedImage>
