--- a/PhantasmaMail/PhantasmaMail/Views/SentView.xaml
+++ b/PhantasmaMail/PhantasmaMail/Views/SentView.xaml
@@ -87,6 +87,7 @@
                                                                           HorizontalOptions="Center"
                                                                           VerticalOptions="Center"
                                                                           HeightRequest="21"
+                                                                          BackgroundColor="Red"
                                                                           WidthRequest="21">
                                             <ffimageloadingsvg:SvgCachedImage.Source>
                                                 <OnPlatform x:TypeArguments="ImageSource">
