--- a/PhantasmaMail/PhantasmaMail/Views/Wallet/WalletView.xaml
+++ b/PhantasmaMail/PhantasmaMail/Views/Wallet/WalletView.xaml
@@ -39,55 +39,55 @@
         </ResourceDictionary>
     </ContentPage.Resources>
     <ContentPage.Content>
+        <ScrollView VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
+            <Grid VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
 
-        <Grid VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
-
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="*" />
-            </Grid.RowDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="*" />
+                </Grid.RowDefinitions>
 
 
-            <Frame Grid.Row="0" IsClippedToBounds="True"
+                <Frame Grid.Row="0" IsClippedToBounds="True"
                    Margin="30,15,30,1" Opacity="0.8"
                    HasShadow="True"
                    BackgroundColor="White"
                    CornerRadius="0" Padding="0" />
 
 
-            <Frame Grid.Row="0"
+                <Frame Grid.Row="0"
                    CornerRadius="0"
                    BackgroundColor="White"
                    Margin="20,30,20,0">
-                <StackLayout HorizontalOptions="FillAndExpand">
-                    <Label Text="Current Balance" 
+                    <StackLayout HorizontalOptions="FillAndExpand">
+                        <Label Text="Current Balance" 
                            HorizontalTextAlignment="Center" HorizontalOptions="Center" 
                            FontFamily="{StaticResource OpenSansSemiBold}"
                            FontSize="{StaticResource MediumSize}"
                            TextColor="{StaticResource LightGray}"/>
 
-                    <Label Text="{Binding CurrentBalanceFiat,StringFormat='$ {0:0.##}'}" 
+                        <Label Text="{Binding CurrentBalanceFiat,StringFormat='$ {0:0.##}'}" 
                            HorizontalTextAlignment="Center" HorizontalOptions="Center"
                            FontFamily="{StaticResource OpenSansSemiBold}"
                            FontSize="{StaticResource LargerSize}"
                            TextColor="{StaticResource DarkBlueGreen}"/>
 
-                    <Label Text ="{Binding UserAddress}" 
+                        <Label Text ="{Binding UserAddress}" 
                            HorizontalTextAlignment="Center" HorizontalOptions="Center"
                            FontFamily="{StaticResource OpenSansSemiBold}"
                            FontSize="{StaticResource LittleSize}"
                            TextColor="{StaticResource LightGray}"/>
 
-                </StackLayout>
-            </Frame>
+                    </StackLayout>
+                </Frame>
 
-            <Button Grid.Row="1" Margin="20" IsVisible="False" IsEnabled="False"
+                <Button Grid.Row="1" Margin="20" IsVisible="False" IsEnabled="False"
                     Style="{StaticResource WalletButtonStyle}" CornerRadius="2"
                     Command="{Binding ClaimGasCommand}"
                     Text="Claim 0.00000000 Gas" />
 
-            <xForms:SfPullToRefresh x:Name="assetList" Grid.Row="2"
+                <xForms:SfPullToRefresh x:Name="assetList" Grid.Row="2"
                                     ProgressBackgroundColor="{StaticResource Accent}"
                                     RefreshContentHeight="40"
                                     RefreshContentWidth="40"
@@ -95,8 +95,8 @@
                                     IsRefreshing="{Binding IsBusy}"
                                     Refreshing="PullToRefresh_Refreshing">
 
-                <sfpullToRefresh:SfPullToRefresh.PullableContent>
-                    <syncfusion:SfListView
+                    <sfpullToRefresh:SfPullToRefresh.PullableContent>
+                        <syncfusion:SfListView
                         x:Name="AssetListView"
                         AutoFitMode="Height"
                         ItemsSource="{Binding AssetsList, Mode=TwoWay}"
@@ -106,34 +106,35 @@
                         IsStickyHeader="false"
                         ItemSpacing="15"
                         VerticalOptions="FillAndExpand">
-                        <syncfusion:SfListView.Triggers>
-                            <DataTrigger TargetType="syncfusion:SfListView"
+                            <syncfusion:SfListView.Triggers>
+                                <DataTrigger TargetType="syncfusion:SfListView"
                                          Binding="{Binding Source={x:Reference AssetListView}, Path=ItemsSource.Count}"
                                          Value="0">
-                                <Setter Property="IsVisible" Value="False" />
-                            </DataTrigger>
-                        </syncfusion:SfListView.Triggers>
-                        <syncfusion:SfListView.ItemTemplate>
-                            <DataTemplate>
-                                <controls:WalletAssetCell />
-                            </DataTemplate>
-                        </syncfusion:SfListView.ItemTemplate>
-                        <syncfusion:SfListView.HeaderTemplate>
-                            <DataTemplate>
-                                <Grid>
-                                    <Label Text="Your Neo tokens" 
+                                    <Setter Property="IsVisible" Value="False" />
+                                </DataTrigger>
+                            </syncfusion:SfListView.Triggers>
+                            <syncfusion:SfListView.ItemTemplate>
+                                <DataTemplate>
+                                    <controls:WalletAssetCell />
+                                </DataTemplate>
+                            </syncfusion:SfListView.ItemTemplate>
+                            <syncfusion:SfListView.HeaderTemplate>
+                                <DataTemplate>
+                                    <Grid>
+                                        <Label Text="Your Neo tokens" 
                                            HorizontalTextAlignment="Start"
                                            FontFamily="{StaticResource OpenSansSemiBold}" 
                                            FontSize="{StaticResource LargeSize}" 
                                            TextColor="{StaticResource LightGray}"/>
-                                </Grid>
-                            </DataTemplate>
-                        </syncfusion:SfListView.HeaderTemplate>
-                    </syncfusion:SfListView>
-                </sfpullToRefresh:SfPullToRefresh.PullableContent>
+                                    </Grid>
+                                </DataTemplate>
+                            </syncfusion:SfListView.HeaderTemplate>
+                        </syncfusion:SfListView>
+                    </sfpullToRefresh:SfPullToRefresh.PullableContent>
 
-            </xForms:SfPullToRefresh>
+                </xForms:SfPullToRefresh>
 
-        </Grid>
+            </Grid>
+        </ScrollView>
     </ContentPage.Content>
 </ContentPage>
